[gd_scene load_steps=10 format=3 uid="uid://bk6ihg1vf71uf"]

[ext_resource type="Script" path="res://Assets_Main/Player.gd" id="1_twfth"]
[ext_resource type="Script" path="res://Assets_Main/Player_interact.gd" id="2_fls23"]
[ext_resource type="PackedScene" uid="uid://bledb03vcydda" path="res://Assets_Main/Pause_menu.tscn" id="2_ghaer"]
[ext_resource type="PackedScene" uid="uid://dtcknsjsvxg38" path="res://Assets_Main/Inventory.tscn" id="3_grckl"]

[sub_resource type="Gradient" id="Gradient_srgr6"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.5)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yxjjg"]
gradient = SubResource("Gradient_srgr6")
width = 3
height = 3
fill_to = Vector2(0.5, 0.5)
repeat = 1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_a500n"]
radius = 0.4
height = 1.8

[sub_resource type="BoxShape3D" id="BoxShape3D_stt28"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxMesh" id="BoxMesh_33j34"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_twfth")

[node name="CrossHair" type="TextureRect" parent="."]
texture_repeat = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -4.5
offset_right = 4.5
offset_bottom = 4.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_yxjjg")

[node name="PlayerColl" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_a500n")

[node name="PlayerCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="InteractRay" type="RayCast3D" parent="PlayerCam"]
target_position = Vector3(0, 0, -2)
collision_mask = 12
script = ExtResource("2_fls23")

[node name="VoxelViewer" type="VoxelViewer" parent="."]

[node name="StandingDetected" type="ShapeCast3D" parent="."]
shape = SubResource("BoxShape3D_stt28")
target_position = Vector3(0, 0.65, 0)

[node name="Inventory" parent="." instance=ExtResource("3_grckl")]

[node name="Pause_menu" parent="." instance=ExtResource("2_ghaer")]

[node name="Cursor" type="CSGMesh3D" parent="."]
mesh = SubResource("BoxMesh_33j34")
